@@ -84,7 +84,7 @@ public class ShardSnapshot {
     }
 
     public List<BlobStoreIndexShardSnapshot.FileInfo> getSnapshotFilesMatching(List<StoreFileMetadata> segmentFiles) {
-        return segmentFiles.stream().map(storeFileMetadata -> snapshotFiles.get(storeFileMetadata.name())).collect(Collectors.toList());
+        return segmentFiles.stream().map(storeFileMetadata -> snapshotFiles.get(storeFileMetadata.name())).toList();
     }
 
     public List<BlobStoreIndexShardSnapshot.FileInfo> getSnapshotFiles() {
