@@ -97,7 +97,7 @@ public class IndexLifecycleUsageTransportAction extends XPackUsageFeatureTranspo
                     );
                 }).collect(Collectors.toMap(Tuple::v1, Tuple::v2));
                 return new IndexLifecycleFeatureSetUsage.PolicyStats(phaseStats, policyUsage.getOrDefault(policy.getName(), 0));
-            }).collect(Collectors.toList());
+            }).toList();
             usage = new IndexLifecycleFeatureSetUsage(policyStats);
         } else {
             usage = new IndexLifecycleFeatureSetUsage();
@@ -119,8 +119,14 @@ public class IndexLifecycleUsageTransportAction extends XPackUsageFeatureTranspo
                 RolloverAction rolloverAction = (RolloverAction) action;
                 consumer.setRolloverMaxAge(rolloverAction.getMaxAge());
                 consumer.setRolloverMaxDocs(rolloverAction.getMaxDocs());
+                consumer.setRolloverMaxPrimaryShardDocs(rolloverAction.getMaxPrimaryShardDocs());
                 consumer.setRolloverMaxPrimaryShardSize(rolloverAction.getMaxPrimaryShardSize());
                 consumer.setRolloverMaxSize(rolloverAction.getMaxSize());
+                consumer.setRolloverMinAge(rolloverAction.getMinAge());
+                consumer.setRolloverMinDocs(rolloverAction.getMinDocs());
+                consumer.setRolloverMinPrimaryShardDocs(rolloverAction.getMinPrimaryShardDocs());
+                consumer.setRolloverMinPrimaryShardSize(rolloverAction.getMinPrimaryShardSize());
+                consumer.setRolloverMinSize(rolloverAction.getMinSize());
             }
             case SetPriorityAction.NAME -> {
                 SetPriorityAction setPriorityAction = (SetPriorityAction) action;
